tests/pos/t3160.scala
import scala.collection.mutable.*
class Node

class A {
  def f(x: Node): Node = ???
}
